tests/snapshots/keys__keys_alt_f@003.snap
---
source: tests/keys.rs
description: "input: items [\"\"]\noptions: -q foo bar foo-bar\nafter:\n  @alt 'f'\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> |foo| bar foo-bar                                                             "
cursor: (24, 8)
