tests/snapshots/keys__keys_arrows@003.snap
---
source: tests/keys.rs
description: "input: items [\"\"]\noptions: -q foo bar foo-bar\nafter:\n  @key Right\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> foo bar foo-ba|r|                                                             "
cursor: (24, 20)
