tests/snapshots/keys__keys_basic.snap
---
source: tests/keys.rs
expression: buf + & cursor_pos
---
"  22                                                                            "
"  21                                                                            "
"  20                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"  13                                                                            "
"  12                                                                            "
"  11                                                                            "
"  10                                                                            "
"  9                                                                             "
"  8                                                                             "
"  7                                                                             "
"  6                                                                             "
"  5                                                                             "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  100/100                                                                    0/0"
">                                                                               "
cursor: (24, 3)
