tests/snapshots/keys__keys_basic@001.snap
---
source: tests/keys.rs
description: "input: items [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\", \"13\", \"14\",\n\"15\", \"16\", \"17\", \"18\", \"19\", \"20\", \"21\", \"22\", \"23\", \"24\", \"25\", \"26\", \"27\",\n\"28\", \"29\", \"30\", \"31\", \"32\", \"33\", \"34\", \"35\", \"36\", \"37\", \"38\", \"39\", \"40\",\n\"41\", \"42\", \"43\", \"44\", \"45\", \"46\", \"47\", \"48\", \"49\", \"50\", \"51\", \"52\", \"53\",\n\"54\", \"55\", \"56\", \"57\", \"58\", \"59\", \"60\", \"61\", \"62\", \"63\", \"64\", \"65\", \"66\",\n\"67\", \"68\", \"69\", \"70\", \"71\", \"72\", \"73\", \"74\", \"75\", \"76\", \"77\", \"78\", \"79\",\n\"80\", \"81\", \"82\", \"83\", \"84\", \"85\", \"86\", \"87\", \"88\", \"89\", \"90\", \"91\", \"92\",\n\"93\", \"94\", \"95\", \"96\", \"97\", \"98\", \"99\", \"100\"]\noptions: "
---
"  22                                                                            "
"  21                                                                            "
"  20                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"  13                                                                            "
"  12                                                                            "
"  11                                                                            "
"  10                                                                            "
"  9                                                                             "
"  8                                                                             "
"  7                                                                             "
"  6                                                                             "
"  5                                                                             "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  100/100                                                                    0/0"
">                                                                               "
cursor: (24, 3)
